# gmdns

./: .gitignore  Cargo.toml  README.md
benches/: name_compression.rs
ddns/: Cargo.toml
ddns-core/src/: wire.rs
ddns-core/src/parser/: question.rs  record.rs
ddns-server/: Cargo.toml  server.toml
ddns-server/src/: lookup.rs  main.rs  policy.rs  publish.rs
ddns/examples/: README.md  mdns_discover.rs  mdns_query.rs  publish.rs  query.rs
ddns/src/: lib.rs  publisher.rs  resolvers.rs
ddns/src/resolvers/: h3.rs  http.rs
examples/: README.md  discover.rs  discovery.rs  h3x_client.rs  h3x_server.rs  mdns.rs  mdns_discover.rs  mdns_query.rs  publish.rs  query.rs  server.rs
examples/keychain/: gen_cert.sh  gen_root.sh
examples/keychain/localhost/: client.cert  client.cnf  client.csr  localhost-ECC.crt  localhost-ECC.key  localhost.csr  openssl.cnf
examples/keychain/publish.test.genmeta.net/: openssl.cnf  publish.test.genmeta.net-ECC.crt  publish.test.genmeta.net-ECC.key  publish.test.genmeta.net.csr
examples/keychain/query.test.genmeta.net/: openssl.cnf  query.test.genmeta.net-ECC.crt  query.test.genmeta.net-ECC.key  query.test.genmeta.net.csr
examples/keychain/root/: rootCA-ECC.key  rootCA-ECC.srl
examples/keychain/xforward.cloudns.ph/: openssl.cnf  xforward.cloudns.ph-ECC.crt  xforward.cloudns.ph-ECC.key  xforward.cloudns.ph.csr
gmdns/: Cargo.toml
gmdns-server/: Cargo.toml  server.toml
gmdns-server/src/: config.rs  error.rs  lookup.rs  main.rs  policy.rs  publish.rs  storage.rs
gmdns/src/: if_nametoindex.rs  lib.rs  mdns.rs  protocol.rs  resolvers.rs
gmdns/src/resolvers/: mdns.rs
src/: async_deque.rs  errors.rs  lib.rs  mdns.rs  old_protocol.rs  parser.rs  protocol.rs  resolve.rs  resolvers.rs  response.rs  wire.rs
src/parser/: header.rs  name.rs  packet.rs  question.rs  record.rs  sigin.rs  varint.rs
src/parser/record/: e.rs  endpoint.rs  ptr.rs  srv.rs  txt.rs
src/resolver/: mod.rs  resolvers.rs
src/resolver/resolvers/: h3.rs  http.rs  mdns.rs
src/resolvers/: h3.rs  http.rs  mdns.rs
