[package]
name = "gmdns"
version = "0.1.0"
edition = "2024"
autoexamples = false

[dependencies]
nom = "8"
bytes = "1"
bitfield-struct = "0.10"
tracing = "0.1"
socket2 = { version = "0.5.8", features = ["all"] }
nix = { version = "0.29", features = ["net"] }
tokio = { version = "1", features = ["time", "macros", "net", "sync", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
rand = "0.9"
futures = "0.3"
flume = "0.11.1"
thiserror = "2.0.12"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring"] }
rustls-pemfile = "2"
base64 = "0.22"
snafu = "0.8"
ring = "0.17"
x509-parser = "0.18"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "rustls-tls",
    "http2",
    "macos-system-configuration",
    "json",
] }
url = "2"
serde = "1"

# Optional HTTP/3 publisher/resolver via h3x
h3x = { path = "../h3x", default-features = false, features = ["gm-quic"], optional = true }
gm-quic = { path = "../gm-quic/gm-quic", optional = true }
http = { version = "1", optional = true }

[features]
default = ["h3x-resolver"]
h3x-resolver = ["dep:h3x", "dep:gm-quic", "dep:http"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
criterion = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls-pki-types = "1"
idna = "1"
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
tracing-appender = "0.2"
deadpool-redis = "0.12"
qbase = { path = "../gm-quic/qbase" }
base64 = "0.22"

[[example]]
name = "mdns_discover"
path = "examples/mdns_discover.rs"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["h3x-resolver"]

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["h3x-resolver"]

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["h3x-resolver"]
