[package]
name = "ddns-server"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "ddns-server"
path = "src/main.rs"

[dependencies]
ddns = { path = "../ddns", features = ["h3x-resolver"] }
dhttp-identity = { git = "ssh://git@github.com/genmeta/dhttp.git", branch = "main" }
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint", features = [
    "dquic",
    "hyper",
] }

# server-specific deps（不再污染核心库）
deadpool-redis = "0.23"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dashmap = "6"
bytes = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
http = "1"
http-body-util = "0.1"
tower-service = "0.3"
nom = "8"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
] }
rustls-pemfile = "2"
idna = "1"
x509-parser = "0.18"
snafu = "0.8"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
futures = "0.3"
ring = "0.17"
