[package]
name = "ddns"
version.workspace = true
edition.workspace = true
autoexamples = false

[dependencies]
ddns-core = { path = "../ddns-core" }
nom = "8"
dashmap = "6"
bytes = "1"
dquic = { git = "ssh://git@github.com/genmeta/dquic.git", branch = "feat/v0.5.1" }
futures = "0.3"
gmdns = { path = "../gmdns" }
rustls = { version = "0.23", default-features = false, features = ["logging", "ring"] }
snafu = "0.8"
tokio = { version = "1", features = ["time", "macros", "net", "sync", "rt", "rt-multi-thread"] }
tracing = "0.1"

h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint", default-features = false, features = ["dquic"], optional = true }
http = { version = "1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["charset", "rustls-tls", "http2", "macos-system-configuration", "json"], optional = true }
url = { version = "2", optional = true }

[features]
default = []
h3x-resolver = ["dep:h3x", "dep:http", "dep:url"]
mdns-resolver = ["dep:h3x", "gmdns/h3x-network"]
http-resolver = ["dep:reqwest"]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
h3x = { git = "https://github.com/genmeta/h3x.git", branch = "endpoint", default-features = false, features = ["dquic"] }
idna = "1"
rustls-pemfile = "2"
rustls-pki-types = "1"
shellexpand = "3"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "mdns_discover"
path = "examples/mdns_discover.rs"

[[example]]
name = "mdns_query"
path = "examples/mdns_query.rs"

[[example]]
name = "publish"
path = "examples/publish.rs"
required-features = ["h3x-resolver"]

[[example]]
name = "query"
path = "examples/query.rs"
required-features = ["h3x-resolver"]
