[package]
name = "gmdns-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gmdns-server"
path = "src/main.rs"

[dependencies]
gmdns = { path = "..", features = ["h3x-resolver"] }
h3x = { path = "../../h3x", features = ["gm-quic"] }

# server-specific deps（不再污染核心库）
deadpool-redis = "0.12"
redis = { version = "0.23", features = ["tokio-comp", "aio"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dashmap = "6"
bytes = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
http = "1"
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "ring",
] }
rustls-pemfile = "2"
idna = "1"
x509-parser = "0.18"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
futures = "0.3"
ring = "0.17"
